fix overflow x issue

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -51,9 +51,16 @@
 
 html,
 body {
-  max-width: 100vw;
+  width: 100%;
   overflow-x: hidden;
   position: relative;
+  margin: 0;
+  padding: 0;
+}
+
+#root {
+  width: 100%;
+  overflow-x: hidden;
 }
 
 body {
